--- a/OWP_Image_Viewer.cbp
+++ b/OWP_Image_Viewer.cbp
@@ -44,6 +44,8 @@
 			<Add directory="D:/Prog_stuff/fltk-1.3.4-1/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="utilities.cpp" />
+		<Unit filename="utilities.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
